Discover activity implemented

--- a/app/src/main/res/layout/content_discover_podcast.xml
+++ b/app/src/main/res/layout/content_discover_podcast.xml
@@ -8,4 +8,10 @@
     tools:context="com.tapura.podmorecasts.discover.DiscoverPodcastActivity"
     tools:showIn="@layout/activity_discover_podcast">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_podcasts_discovered_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
