--- a/app/src/main/res/layout/activity_discover_podcast.xml
+++ b/app/src/main/res/layout/activity_discover_podcast.xml
@@ -18,9 +18,11 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
             <SearchView
+                android:id="@+id/search_view"
                 android:queryHint="Search a Podcast"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+
                 />
         </android.support.v7.widget.Toolbar>
 
