--- a/app/src/main/res/layout/activity_details_podcast.xml
+++ b/app/src/main/res/layout/activity_details_podcast.xml
@@ -2,7 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -46,6 +47,12 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_episodes_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    <!--
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -53,7 +60,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -65,10 +72,21 @@
                 android:id="@+id/text_view_podcast_summary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/text_view_label_episodes_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Episodes available:"
+                tools:text="Episodes available:" />
+
+
         </LinearLayout>
 
 
+
     </android.support.v4.widget.NestedScrollView>
+     -->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_share"
