--- a/app/src/main/res/layout/activity_details_podcast.xml
+++ b/app/src/main/res/layout/activity_details_podcast.xml
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:onClick="favoritePodcast"
+        android:onClick="onFabClick"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|end"
         android:visibility="gone"/>
