--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tapura.podmorecasts.player.MediaPlayerActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.tapura.podmorecasts.player.MediaPlayerActivity">
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/playerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:fastforward_increment="@integer/fast_forward"
+        app:rewind_increment="@integer/rewind" />
 </LinearLayout>
