LINT: Cleaning the house!

--- a/app/src/main/res/layout/list_item_episode.xml
+++ b/app/src/main/res/layout/list_item_episode.xml
@@ -29,6 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_file_download_black"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:contentDescription="@string/description_download_icon"/>
 
 </android.support.constraint.ConstraintLayout>
