--- a/app/src/main/res/layout/activity_details_podcast.xml
+++ b/app/src/main/res/layout/activity_details_podcast.xml
@@ -12,7 +12,6 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/toolbar_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
@@ -32,7 +31,8 @@
                 android:layout_margin="5dp"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerInside"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax"
+                android:contentDescription="@string/description_thumbnail" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
