--- a/app/src/main/res/layout/grid_item_podcast.xml
+++ b/app/src/main/res/layout/grid_item_podcast.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
-        tools:src="@drawable/ic_launcher_background">
+        tools:src="@drawable/ic_launcher_background"
+        android:contentDescription="@string/description_podcast_item">
     </ImageView>
 </FrameLayout>
