--- a/app/src/main/res/layout/list_item_podcast.xml
+++ b/app/src/main/res/layout/list_item_podcast.xml
@@ -14,7 +14,8 @@
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_launcher_background">
+        tools:src="@drawable/ic_launcher_background"
+        android:contentDescription="@string/description_podcast_item">
 
     </ImageView>
 
