--- a/app/src/main/res/layout/podcast_widget.xml
+++ b/app/src/main/res/layout/podcast_widget.xml
@@ -23,9 +23,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-
-
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/widget_empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/no_podcast" />
 
 
 </LinearLayout>
