--- a/app/src/main/res/layout/podcast_widget.xml
+++ b/app/src/main/res/layout/podcast_widget.xml
@@ -10,7 +10,8 @@
         android:background="@color/colorPrimary"
         android:textAppearance="@android:style/TextAppearance.Material.Headline"
         android:textColor="@color/colorAccent"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:text="@string/app_name"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -20,7 +21,7 @@
 
         <ListView
             android:id="@+id/list_view_podcasts"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </FrameLayout>
