--- a/app/src/main/res/layout/podcast_widget_list_item.xml
+++ b/app/src/main/res/layout/podcast_widget_list_item.xml
@@ -5,25 +5,27 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/image_view_podcast_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:contentDescription="@string/description_podcast_item"/>
 
         <TextView
+            android:layout_margin="2dp"
             android:id="@+id/text_view_podcast_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:layout_margin="2dp"
             android:id="@+id/text_view_podcast_author_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 </LinearLayout>
