--- a/app/src/main/res/layout/podcast_widget.xml
+++ b/app/src/main/res/layout/podcast_widget.xml
@@ -6,12 +6,14 @@
     <TextView
         android:id="@+id/text_view_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?android:attr/actionBarSize"
         android:background="@color/colorPrimary"
         android:textAppearance="@android:style/TextAppearance.Material.Headline"
         android:textColor="@color/colorAccent"
         android:textStyle="bold"
-        android:text="@string/app_name"/>
+        android:text="@string/app_name"
+        android:gravity="center_vertical"
+        android:padding="10dp"/>
 
     <FrameLayout
         android:layout_width="match_parent"
