--- a/app/src/main/res/xml/podcast_widget_info.xml
+++ b/app/src/main/res/xml/podcast_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/podcast_widget"
     android:minHeight="110dp"
     android:minWidth="180dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@mipmap/ic_launcher"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen" />
