--- a/app/src/main/res/layout/content_discover_podcast.xml
+++ b/app/src/main/res/layout/content_discover_podcast.xml
@@ -14,8 +14,8 @@
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/progress_bar_size"
+        android:layout_height="@dimen/progress_bar_size"
         android:layout_gravity="center"
         android:id="@+id/layout_loading_progressbar"
         android:indeterminate="true"
