--- a/app/src/main/res/layout/list_item_podcast.xml
+++ b/app/src/main/res/layout/list_item_podcast.xml
@@ -7,9 +7,8 @@
 
     <ImageView
         android:id="@+id/image_view_podcast_item"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_margin="8dp"
+        android:layout_width="@dimen/base_podcast_item_image_size"
+        android:layout_height="@dimen/base_podcast_item_image_size"
         android:adjustViewBounds="true"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,11 +20,11 @@
 
     <TextView
         android:id="@+id/text_view_podcast_name"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/podcast_name_discover_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginBottom="@dimen/podcast_name_discover_margin_bottom"
+        android:layout_marginEnd="@dimen/podcast_name_discover_margin_end"
+        android:layout_marginStart="@dimen/podcast_name_discover_margin_start"
         android:ellipsize="end"
         android:lines="1"
         app:layout_constraintBottom_toTopOf="@+id/text_view_podcast_author_name"
@@ -35,12 +34,12 @@
 
     <TextView
         android:id="@+id/text_view_podcast_author_name"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/podcast_author_discover_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="@dimen/podcast_author_discover_margin_bottom"
+        android:layout_marginEnd="@dimen/podcast_author_discover_margin_topend"
+        android:layout_marginStart="@dimen/podcast_author_discover_margin_start"
+        android:layout_marginTop="@dimen/podcast_author_discover_margin_topend"
         android:ellipsize="end"
         android:lines="1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,11 +50,11 @@
 
     <TextView
         android:id="@+id/text_view_podcast_genre"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/podcast_genre_discover_width"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginEnd="@dimen/podcast_genre_discover_margin_end"
+        android:layout_marginStart="@dimen/podcast_genre_discover_margin_start"
+        android:layout_marginTop="@dimen/podcast_genre_discover_margin_top"
         android:ellipsize="end"
         android:lines="1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,12 +66,9 @@
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:background="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 </android.support.constraint.ConstraintLayout>
