--- a/app/src/main/res/layout/activity_details_podcast.xml
+++ b/app/src/main/res/layout/activity_details_podcast.xml
@@ -7,7 +7,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="@dimen/appbar_height"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -28,7 +28,7 @@
                 android:id="@+id/thumbnail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_margin="@dimen/thumbnail_margin"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerInside"
                 app:layout_collapseMode="parallax"
@@ -47,7 +47,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/recycler_view_top_margin"
         android:id="@+id/recycler_view_episodes_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,8 +56,8 @@
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/progress_bar_size"
+        android:layout_height="@dimen/progress_bar_size"
         android:layout_gravity="center"
         android:id="@+id/layout_loading_progressbar"
         android:indeterminate="true"
@@ -67,7 +67,7 @@
         android:id="@+id/fab_add_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/fab_margin"
         android:onClick="onFabClick"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|end"
