--- a/app/src/main/res/layout/list_item_episode.xml
+++ b/app/src/main/res/layout/list_item_episode.xml
@@ -7,9 +7,9 @@
 
     <TextView
         android:id="@+id/text_view_episode_title"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/episode_title_width"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/episode_title_margin"
         android:gravity="start"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,9 +22,9 @@
         android:id="@+id/image_view_download"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="@dimen/download_icon_margin"
+        android:layout_marginEnd="@dimen/download_icon_margin"
+        android:layout_marginTop="@dimen/download_icon_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
