--- a/app/src/main/res/layout/podcast_widget.xml
+++ b/app/src/main/res/layout/podcast_widget.xml
@@ -9,16 +9,16 @@
         android:layout_height="?android:attr/actionBarSize"
         android:background="@color/colorPrimary"
         android:textAppearance="@android:style/TextAppearance.Material.Headline"
-        android:textColor="@color/colorAccent"
+        android:textColor="@android:color/white"
         android:textStyle="bold"
         android:text="@string/app_name"
         android:gravity="center_vertical"
-        android:padding="10dp"/>
+        android:padding="@dimen/widget_title_padding"/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fff"
+        android:background="@android:color/white"
         android:padding="@dimen/widget_margin">
 
         <ListView
@@ -33,6 +33,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/no_podcast" />
-
 
 </LinearLayout>
