--- a/app/src/main/res/layout/podcast_widget_list_item.xml
+++ b/app/src/main/res/layout/podcast_widget_list_item.xml
@@ -7,26 +7,35 @@
     <LinearLayout
         android:id="@+id/widget_list_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/base_podcast_item_image_size"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/image_view_podcast_item"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="@dimen/base_podcast_item_image_size"
+            android:layout_height="match_parent"
             android:contentDescription="@string/description_podcast_item"/>
 
-        <TextView
-            android:layout_margin="2dp"
-            android:id="@+id/text_view_podcast_name"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_margin="@dimen/widget_text_margin"
+                android:id="@+id/text_view_podcast_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/widget_podcast_name_text_size"/>
 
-        <TextView
-            android:layout_margin="2dp"
-            android:id="@+id/text_view_podcast_author_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_margin="@dimen/widget_text_margin"
+                android:id="@+id/text_view_podcast_author_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/widget_podcast_author_text_size"/>
+        </LinearLayout>
+
+
 
     </LinearLayout>
 </LinearLayout>
