--- a/app/src/main/res/layout/activity_details_podcast.xml
+++ b/app/src/main/res/layout/activity_details_podcast.xml
@@ -64,12 +64,13 @@
         android:visibility="gone"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_add_favorite"
+        android:id="@+id/fab_add_remove_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:onClick="onFabClick"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|end"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:contentDescription="@string/description_fab_add_or_remove"/>
 </android.support.design.widget.CoordinatorLayout>
